--- a/index.html
+++ b/index.html
@@ -6,17 +6,37 @@
   <meta name="viewport" content="width=device-width">
   <title>Shopping List</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <script src="https://kit.fontawesome.com/dde5490d2b.js" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </head>
 
 <body>
-  <nav>
-    
-  </nav>
+  <!-- Navbar -->
+  <header id="header">
+    Shopping List
+  </header>
 
-  
-  <script src="script.js"></script>
+  <!-- List -->
+  <form id="list">
 
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+    <ul class="todo">
+      <li><input type="checkbox" id="todo-item"/></li>
+      <li class="item-name" htmlFor="todo-item">우유</li>
+      <li class="trash">
+        <i class="fa-solid fa-trash-can"></i>
+      </li>
+    </ul>
+
+  </form>
+
+  <!-- Bottom -->
+  <div id="bottom">
+    <input id="input" type="text" name="add" />
+    <button id="add"><i class="fa-solid fa-plus"></i></button>
+  </div>
+
+
+
 </body>
 
 </html>
