HTML: add 'incomplete/complete task'

--- a/index.html
+++ b/index.html
@@ -18,21 +18,33 @@
 
   <!-- List -->
   <form id="list">
-
-    <ul class="todo">
-      <li><input type="checkbox" id="todo-item"/></li>
-      <li class="item-name" htmlFor="todo-item">우유</li>
-      <li class="trash">
-        <i class="fa-solid fa-trash-can"></i>
-      </li>
+    
+    <h3> To do </h3>
+    <ul class="incomplete-tasks">
+      <li class='todo-box'>
+        <input type="checkbox" id="todo-item" value="1"/>
+        <label class="item-name" for ="todo-item" type="text" >우유</label>
+        <button class="edit">Edit</button>
+        <button class="trash"><i class="fa-solid fa-trash-can"></i></button>
+      </li>  
     </ul>
 
+    <h3> Completed </h3>
+    <ul class="complete-tasks">
+      <li class='todo-box'>
+        <input type="checkbox" id="todo-item" value="1"/>
+        <label class="item-name" for ="todo-item" type="text" >빵</label>
+        <button class="edit">Edit</button>
+        <button class="trash"><i class="fa-solid fa-trash-can"></i></button>
+      </li>  
+    </ul>
+    
   </form>
 
   <!-- Bottom -->
   <div id="bottom">
-    <input id="input" type="text" name="add" />
-    <button id="add"><i class="fa-solid fa-plus"></i></button>
+    <input id="inputText" type="text" name="add" placeholder="What do you want?"/>
+    <button id="addBTN" ><i class="fa-solid fa-plus"></i></button>
   </div>
 
 
