--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <ul class="items">
         <li class="item_row">
           <div class="item">
-            <span class="item_name">Egg</span>
+            <input type="checkbox" id="item_name_check" value="1"/>
+            <label for="item_name_check" class="item_name">Egg</label>
             <button class="item_delete">
               <i class="fas fa-trash-can"></i>
             </button>
