JS: Edit initial

--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
           <div class="item">
             <input type="checkbox" id="item_name_check" value="1"/>
             <label for="item_name_check" class="item_name">Egg</label>
-            <button class="item_delete">
-              <i class="fas fa-trash-can"></i>
-            </button>
+            <div class="button_container">
+              <button class="item_edit">Edit</button>
+              <button class="item_delete">
+                <i class="fas fa-trash-can"></i>
+              </button>
+            </div>
+            
           </div>
           <div class="item_divider"></div>
         </li>
