--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li class="item_row">
           <div class="item">
             <input type="checkbox" id="item_name_check" value="1"/>
-            <label for="item_name_check" class="item_name">Egg</label>
+            <label for="item_name_check"><span class="item_name">Egg</span></label>
             <div class="button_container">
               <button class="item_edit">Edit</button>
               <button class="item_delete">
