--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TodoList</title>
     <script src="script.js" defer></script>
+    <script src="date.js" defer></script>
     <script
       src="https://kit.fontawesome.com/dde5490d2b.js"
       crossorigin="anonymous"></script>
@@ -17,7 +18,13 @@
   </head>
   <body>
     <section class="list">
-      <header class="header">Shopping List</header>
+      <header class="header">
+        <div class="header__date"></div>
+        <div class="header__name">
+        Just do it <i class="fa-solid fa-check-double"></i> 
+        </div>    
+    </header>
+
       <ul class="items">
         <li class="item_row">
           <div class="item">
