--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <ul class="items">
               <li class="item_row">
                 <div class="item">
-                  <input type="checkbox" id="item_name_check" value="1" />
-                  <label for="item_name_check"
+                  <input type="checkbox" id="row_check" value="1" />
+                  <label for="row_check" 
                     ><span class="item_name">Egg</span></label
                   >
                   <div class="button_container">
